--- a/package.json
+++ b/package.json
@@ -7,13 +7,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.29",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "@types/react-redux": "^7.1.24",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-thunk": "^2.1.0",
     "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -22,7 +15,6 @@
     "react-scripts": "5.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -51,9 +43,26 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-thunk": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "autoprefixer": "^10.4.5",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.0.24"
+    "prettier": "2.6.2",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   }
 }
