--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "postcss-cli": "^9.1.0",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "webpack-cli": "^4.9.2"
   }
 }
