--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-scripts": "5.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -63,6 +62,7 @@
     "postcss-cli": "^9.1.0",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
   }
 }
