--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
     "react-hooks/exhaustive-deps": 0,
     "prettier/prettier": 1,
     "no-unused-vars": 1,
-    "@typescript-eslint/no-explicit-any": 0
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-non-null-assertion": 0
   },
   "settings": {
     "react": {
