--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "formik": "^2.2.9",
-    "husky": "^7.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -22,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -59,11 +59,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.1",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
