--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,48 +1,22 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
   "extends": [
     "eslint:recommended",
-    "plugin:import/errors",
     "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:react/jsx-runtime",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:react/jsx-runtime"
   ],
-  "plugins": ["react", "import", "jsx-a11y", "prettier", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
-    }
-  },
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true,
-    "jest": true
-  },
-  "rules": {
-    "react/prop-types": 2,
-    "react/react-in-jsx-scope": 0,
-    "react-hooks/exhaustive-deps": 0,
-    "prettier/prettier": 1,
-    "no-unused-vars": 1,
-    "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-non-null-assertion": 0
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
     },
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
-  "root": true,
-  "parser": "@typescript-eslint/parser"
+  "plugins": ["react", "@typescript-eslint"],
+  "rules": {}
 }
