--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "autoprefixer": "^10.4.5",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
@@ -69,6 +69,6 @@
     "web-vitals": "^2.1.4"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,ts,tsx}": "eslint --cache --fix"
   }
 }
