--- a/package.json
+++ b/package.json
@@ -69,6 +69,11 @@
     "web-vitals": "^2.1.4"
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": "eslint --cache --fix"
+    "*.{js,ts,tsx}": [
+      "eslint --cache --fix"
+    ],
+    "**/*.{js,jsx,ts,tsx,json,css,js}": [
+      "prettier --write"
+    ]
   }
 }
