--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
     "prettier/prettier": 1,
     "no-unused-vars": 1,
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-non-null-assertion": 0
+    "@typescript-eslint/no-non-null-assertion": 0,
+    "import/no-unresolved": [2, { "caseSensitive": false }]
   },
   "settings": {
     "react": {
