--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next-http-backend": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.4.1",
+    "redux-toolkit-persist": "^1.1.0",
     "yup": "^0.32.11"
   },
   "scripts": {
