--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next-http-backend": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-error-boundary": "^3.1.4",
     "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
